# cpp-project

./: .gitignore  CMakeLists.txt  README.md
libs/: hello.cpp
src/: CMakeLists.txt  main.cpp
